# OM_Studio

./: .gitignore  EXECUTIVE_SUMMARY.txt  README.md  launch_gui.bat  pyproject.toml  setup_gui.bat
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
docs/: ARCHITECTURE.md  GUI_TO_CODE_TRACEABILITY_GUIDE.md  ROADMAP.md  SHARED_FOUNDATION_PLAN.md  SISTER_REPO_ALIGNMENT_ROADMAP.md  UI_COMPOSITION_PATTERN.md
examples/: __init__.py
examples/reference_workflows/: __init__.py  om_monitoring_reference.py
examples/reference_workflows/expected/: om_monitoring_reference.json
scripts/: capture_ui_regression_screenshots.py  profile_monitoring_run.py
src/quant_studio_monitoring/: __init__.py  artifact_completeness.py  config.py  demo_assets.py  file_cache.py  gui_launcher.py  monitoring_bundle_contract.py  monitoring_metrics.py  monitoring_pipeline.py  monitoring_reporting.py  monitoring_run_config.py  presentation.py  registry.py  run_comparison.py  run_history.py  support_tables.py  telemetry.py  test_applicability.py  test_catalog.py  thresholds.py  ui_regression.py
src/quant_studio_monitoring/streamlit_ui/: __init__.py  app_controller.py  state.py
tests/: test_golden_path.py  test_monitoring_pipeline.py  test_reference_workflows.py  test_registry.py  test_run_comparison.py  test_thresholds.py  test_ui_regression.py
